src/popup/custom.sass
@import ../../node_modules/bulma/bulma.sass

a
  outline: 0 !important

button::-moz-focus-inner
  border: 0

span.custom
  margin-right: 10px
  top: 3px

.margin-top-15
  margin-top: 15px !important

.margin-bottom-5
  margin-bottom: 5px !important

.padding-10
  padding: 10px !important

.padding-horizontal-10
  padding-right: 10px !important
  padding-left: 10px !important

.margin-horizontal-10
  margin-left: 10px !important
  margin-right: 10px !important

